syntax = "proto3";

option java_multiple_files = true;
option java_package = "planets";
option java_outer_classname = "StarWarsPlanetsProto";
package com.politrons.proto;

// The greeting service definition.
service StarWarsPlanetService {
  // Sends a greeting
  rpc GetPlanets (PlanetRequest) returns (PlanetResponse) {}
}

// The request message containing the user's name.
message PlanetRequest {
  string episode = 1;
}

// The response message containing the greetings
message PlanetResponse {
  string planets = 1;
}